salesforce/force-app/main/default/objects/Notification__c/Notification__c.object-meta.xml
<CustomObject>
    <description>Outbox. Scheduled Apex writes rows here; the Worker cron polls, sends Web Push, and reports the result back. Dedupe_Key__c makes the scheduler safe to run repeatedly.</description>
    <label>Notification</label>
    <nameField>
        <displayFormat>NTF-{0000}</displayFormat>
        <label>Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>