salesforce/force-app/main/default/objects/Notification__c/fields/Actions_JSON__c.field-meta.xml
<CustomField>
    <fullName>Actions_JSON__c</fullName>
    <description>At most 2 actions - Android shows no more. e.g. [{"id":"received","label":"Got it"}]</description>
    <label>Actions JSON</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>