salesforce/force-app/main/default/objects/Notification__c/fields/Dedupe_Key__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Key__c</fullName>
    <description>e.g. confirm:{shipmentId}:{n}. Unique, so an hourly scheduler cannot spam the same nudge.</description>
    <label>Dedupe Key</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>