salesforce/force-app/main/default/objects/Notification__c/fields/Deep_Link__c.field-meta.xml
<CustomField>
    <fullName>Deep_Link__c</fullName>
    <description>Hash route into the PWA, e.g. #/orders/a01xxx. HashRouter is required because GitHub Pages 404s on real SPA paths.</description>
    <label>Deep Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>