salesforce/force-app/main/default/objects/Notification__c/fields/Due_At__c.field-meta.xml
<CustomField>
    <fullName>Due_At__c</fullName>
    <description>The Worker cron only picks up rows due now or earlier.</description>
    <label>Due At</label>
    <type>DateTime</type>
</CustomField>