salesforce/force-app/main/default/objects/Notification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Morning Digest</fullName>
                </value>
                <value>
                    <fullName>Confirm Delivery</fullName>
                </value>
                <value>
                    <fullName>Stalled</fullName>
                </value>
                <value>
                    <fullName>Seller Follow-up</fullName>
                </value>
                <value>
                    <fullName>Refund Check</fullName>
                </value>
                <value>
                    <fullName>Return Window</fullName>
                </value>
                <value>
                    <fullName>Review Needed</fullName>
                </value>
                <value>
                    <fullName>Weekly Check</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>